# tictactoe

./: CMakeLists.txt  README.md
tttlib/: CMakeLists.txt  basic_fields.cpp  basic_fields.h  composed_observer.cpp  composed_observer.h  events.cpp  events.h  field.h  game_engine.cpp  game_engine.h  game_state.h  player.h  types.h
tttlib/tests/: CMakeLists.txt  test_engine.cpp  test_events.cpp  test_fields.cpp  tests_common.h
tttplayer/: CMakeLists.txt  main.cpp  my_player.cpp  my_player.h  random_bot.cpp  random_bot.h
tttplayer/tests/: CMakeLists.txt  my_test.cpp
